# ROS2_sync_subscriber

./: CMakeLists.txt  package.xml
src/: camera_sync_node.cpp  camera_sync_node_lepton.cpp  sync_node.cpp
